# shifts-etl

./: .gitignore  README.md  docker-compose.yml  initdb.sql  requirements.txt
.github/workflow/: ci.yml
.github/workflows/: ci.yml
api/: .flake8  .pylintrc  Dockerfile  README.md  pyproject.toml
api/app/: __init__.py  generator.py  main.py  models.py
etl/: .flake8  pyproject.toml
etl/app/converter/: __init__.py  schemas.py
etl/app/database/: __init__.py
etl/app/dependencies/: logger.py  spark.py
etl/app/jobs/: etl_job.py  kpis_job.py  utils.py
etl/app/tests/: schemas.py  test.py  test_data.json
etl/app/tests/test_data/: breaks.csv  shifts.csv
etl/starter/: Dockerfile  init.sh
