[tool.poetry]
name = "api"
version = "0.1.0"
description = "Shifts interview assignment API"
authors = []

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "0.63.0"
uvicorn = {version = "0.13.3", extras = ["standard"]}

[tool.poetry.dev-dependencies]
black = "^20.8b1"
mypy = "^0.812"
pylint = "^2.6.2"
isort = "^5.7.0"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
