[tool.poetry]
name = "etl"
version = "0.1.0"
description = "ETL job"
authors = ["specnazm <laketic.milena98@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flake8 = "^4.0.1"
pyspark = "^3.2.1"
requests = "^2.27.1"
jsonschema = "^4.6.0"
black = "^22.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
